--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Title</title>
+    <title>Scrolling</title>
   </head>
   <body>
 <marquee behavior="scroll" direction="up" scrollamount="1">Make sure to drink milk to cure your bones!</marquee>
 <marquee behavior="scroll" direction="right" scrollamount="12">VEGETABLES</marquee>
 <marquee behavior="scroll" direction="left" scrollamount="20">fruit</marquee>
-<marquee behavior="scroll" direction="right" scrollamount="50">MeAt</marquee>  </body>
+<marquee behavior="scroll" direction="right" scrollamount="40">MeAt</marquee>  </body>
 </html>
