--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
 <marquee behavior="scroll" direction="up" scrollamount="1">Make sure to drink milk to cure your bones!</marquee>
 <marquee behavior="scroll" direction="right" scrollamount="12">VEGETABLES</marquee>
-<marquee behavior="scroll" direction="left" scrollamount="20">fruit</marquee>
-<marquee behavior="scroll" direction="right" scrollamount="40">MeAt</marquee>  </body>
+<marquee behavior="slide" direction="left" scrollamount="20">fruit</marquee>
+<marquee behavior="scroll" direction="right" scrollamount="30">MeAt</marquee>  </body>
 </html>
