--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Scrolling</title>
   </head>
   <body>
-<marquee behavior="scroll" direction="up" scrollamount="1">Make sure to drink milk to cure your bones!</marquee>
-<marquee behavior="scroll" direction="right" scrollamount="12">VEGETABLES</marquee>
+<marquee behavior="alternate" direction="up" scrollamount="1">Make sure to drink milk to cure your bones!</marquee>
+<marquee behavior="alternate" direction="right" scrollamount="12">VEGETABLES</marquee>
 <marquee behavior="alternate" direction="left" scrollamount="20">fruit</marquee>
-<marquee behavior="scroll" direction="right" scrollamount="30">MeAt</marquee>  </body>
+<marquee behavior="alternate" direction="right" scrollamount="30">MeAt</marquee>  </body>
 </html>
